# gg-discord-bot

./: Cargo.toml  README.md
src/: lib.rs  types.rs
