[package]
name = "gg-discord-bot"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
discord-flows = "0.4"
flowsnet-platform-sdk = "0.1"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
log = "0.4"
serde_json = "1.0"
anyhow = "1"
serde = { version = "1.0", features = ["derive"]}
http_req_wasi = "0.10"
regex = "1.9.3"
